# open-ebsd

./: CMakeLists.txt  Installation.md  LinuxInstallation.md  ProjectHome.md  alignment.cpp  boundaries.cpp  dialogs.h  ebsd.cpp  ebsd.h  file_access.cpp  interface.fbp  processing.cpp  pymod.h  segmentation.cpp  symmetry.h  vtk.h  vtk2DEBSDWindow.cpp  vtkFrame.cpp  wxEBSD.cpp  wxEBSD.h  wxEBSDInterface.fbp
CMake/: FindNumpy.cmake
branch/open-ebsd-wx/: boundaries.cpp  pymod.cpp
branch/open-ebsd-wx/newmat10/: test_exc
branch/open-ebsd-wx/python/: ebsd_handlers.py  ebsd_plugin.py  pr.py
branch/open-ebsd-wx/wxInterface/: interface.cpp  open-ebsdfileInfoDialogUI.h  open-ebsdvtkFrameUI.h  vtk2DEBSDWindow.cpp  vtk2DEBSDWindow.h
branches/1.0/: CMakeLists.txt  alignment.cpp  characterisation.cpp  file_access.cpp  segmentation.cpp  visualisation.cpp
branches/1.0/newmat10/: tmt
branches/1.0/python/: ebsd_file_dialog.py
branches/2.0/: alignment.cpp  prob.C  visualisation.h
branches/2.0/wxInterface/: open-ebsdalignmentFrameUI.cpp  open-ebsddilateDialogUI.cpp  open-ebsdfilterDialogUI.h  vtk3DEBSDWindow.cpp  vtkWindow.cpp
newmat10/: nl_ex  sl_ex  tmt.cpp
python/: ebsd_dialogs.py  ebsd_ui.py  plugin_definitions.py  run.py
trunk/: CMakeLists.txt  alignmentFrame.cpp  alignmentFrame.h  characterisation.cpp  dataset.cpp  dialogs.cpp  doxygen.txt  ebsd-gtk.cpp  ebsd.cpp  ebsd.h  file_access.cpp  orientation.cpp  prob.H  segmentation.cpp  symmetry.h  visualisation.cpp  visualisation.h  vtk2DEBSDWindow.h  vtk3DEBSDWindow.cpp  vtk3DEBSDWindow.h  vtkFrame.cpp  vtkFrame.h  wxEBSD.h
trunk/CMake/: FindGTK2.cmake  FindNumpy.cmake
trunk/newmat10/: CMakeLists.txt  garch
trunk/python/: ebsd_plugin.py  ebsd_plugin_definition.py  pa.py
trunk/vtkgtk/: vtkGtkRenderWindowInteractor.h
trunk/wxInterface/: dialogs.cpp  interface.fbp  interface.h  open-ebsdalignmentFrameUI.h  open-ebsddilateDialogUI.h  open-ebsdfileInfoDialogUI.cpp  open-ebsdfilterDialogUI.cpp  open-ebsdvtkFrameUI.cpp  vtk3DEBSDWindow.cpp  vtkFrame.cpp  vtkWindow.h  wx-ebsd.cpp  wx-ebsd.h
vtkgtk/: vtkGtkRenderWindowInteractor.cxx
wiki/: Installation.wiki  LinuxInstallation.wiki
wxInterface/: alignmentFrame.cpp  interface.fbp  interface.h  open-ebsdsegmentDialogUI.cpp  open-ebsdsegmentDialogUI.h  vtk2DEBSDWindow.h  vtk3DEBSDWindow.h  wx-ebsd.cpp  wx-ebsd.h  wxebsd.cpp
