ADD_LIBRARY(newmat STATIC 
newmat1.cpp
newmat.h
include.h
boolean.h
myexcept.h
newmat2.cpp
newmatrc.h
controlw.h
newmat3.cpp
newmat4.cpp
newmat5.cpp
newmat6.cpp
newmat7.cpp
newmat8.cpp
precisio.h
newmatex.cpp
bandmat.cpp
submat.cpp
myexcept.cpp
cholesky.cpp
evalue.cpp
newmatap.h
newmatrm.h
fft.cpp
hholder.cpp
jacobi.cpp
newfft.cpp
sort.cpp
svd.cpp
newmatrm.cpp
newmat9.cpp
newmatio.h
tmt.cpp
tmt.h
tmt1.cpp
tmt2.cpp
tmt3.cpp
tmt4.cpp
tmt5.cpp
tmt6.cpp
tmt7.cpp
tmt8.cpp
tmt9.cpp
tmta.cpp
tmtb.cpp
tmtc.cpp
tmtd.cpp
tmte.cpp
tmtf.cpp
tmtg.cpp
tmth.cpp
tmti.cpp
tmtj.cpp
tmtk.cpp
tmtl.cpp
tmtm.cpp)

SET_TARGET_PROPERTIES(newmat PROPERTIES
							COMPILE_FLAGS  -EHsc)